2008-06-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* tiempo.c (RefreshTime): Deleted function.

	* Makefile.am: Added 2008 to the copyright years list.

	* tiempo.c: Added 2008 to the copyright years list.

	* tipos.h: Added 2008 to the copyright years list. Deleted some
	vars used with the old interface.

	* compras.c (AddFactura): Changed to use GDate.
	(ShowProductDescription): Deleted function.
	(SearchProductHistory): Deleted old commented code. Added comments
	to keep out the use of label_canje and label_stock_pro vars.
	(compras_win|RemoveBuyProduct): "gtk_widget_set_sensitive
	(confirm_button, TRUE);" deleted.
	(IngresoParcial|ChangeIngreso): Deleted function.
	(CambiarStock): Commented function, can be used in the future.
	(ElabVencCal|CloseElabVenc): Deleted.
	(SetElabVenc|DrawAsk): Deleted
	(AskIngreso): Deleted commented code.
	(CloseAskIngreso): Deleted unnecessary code.
	(on_button_ok_ingress_clicked): Added code to deal with
	partial_guide ingress.

2008-06-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_tree_selection_pending_guide_changed): Added
	function to deal with the proper signal and fill the bottom tree
	view with the product list of the selected guide.

	* utils.c (clean_container): Added support to deal with tree views
	and treat a gtk_treeview as a widget not as a container.

	* utils.h: Added declaratino of clean_container().

	* compras.c (CalcularTotalesGuias|CheckMontoGuias): Changed to use the GtkBuilder interface.

2008-06-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c (clean_container): Added function to clean
	containers. Focused on GtkWindows and clean any GtkLabel or
	GtkEntry without a number on the widget name.
	(clean_container): Replaced the do-while for a while.

2008-06-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c
	(on_btn_invoice_guide_clicked|on_btn_guide_invoice_clicke): Added
	function to handle the proper signal.
	(AddGuia|DelGuia): Deleted function. No one use it now.
