@@ -1,7 +1,7 @@
 /* -*- Mode: C; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
 /*tiempo.h
 *
-*    Copyright (C) 2004 Rizoma Tecnologia Limitada <info@rizoma.cl>
+*    Copyright (C) 2004,2008 Rizoma Tecnologia Limitada <info@rizoma.cl>
 *
 *    This file is part of rizoma.
 *
@@ -23,10 +23,6 @@
 #ifndef TIEMPO_H
 
 #define TIEMPO_H
-
-GtkWidget * show_date (void);
-
-gboolean RefreshTime (gpointer data);
 
 gchar * CurrentDate (void);
 
